--- a/client/src/components/Filters/filter.css
+++ b/client/src/components/Filters/filter.css
@@ -15,6 +15,14 @@
   .select_population,
   .select_alph,
   .select_all {
-    padding: 5px;
+    background-color: transparent;
+    color: #8E44AD; /* Color celeste claro */
+    border: 1px solid transparent; /* Borde transparente */
+    font-size: 16px; /* Tamaño de fuente más grande */
+    font-weight: bold;
+    border-radius: 5px;
   }
-  
+
+  select option {
+    font-weight: bold;
+  }
