--- a/client/src/components/detail/detail.css
+++ b/client/src/components/detail/detail.css
@@ -1,7 +1,6 @@
 .main-container {
   position: relative;
   display: grid;
-  background-color: rgb(147, 159, 196);
   background-size: 100%; /* Añade esta línea */
   background-repeat: no-repeat; /* Añade esta línea */
   background-position: center center; /* Añade esta línea */
@@ -23,6 +22,7 @@
     align-items: center;
     object-fit: contain;
     overflow: hidden;
+    border: 2px solid black;
   }
   
 
