--- a/client/src/components/searchBar/searchBar.css
+++ b/client/src/components/searchBar/searchBar.css
@@ -1,5 +1,6 @@
 .searchBar {
-    background-color: rgba(151, 182, 240, 0.7);
+    background-image: url("./fondo.jpg");
+    background-size: cover;
     height: 70px;
   }
   
@@ -18,6 +19,9 @@
     height: 35px;
     margin-top: 10px;
     width: 500px;
+    font-size: 16px;
+    color: #8E44AD;
+    font-weight: bold;
   }
   
 
@@ -32,8 +36,9 @@
     top: 2px;
     right: 200px;
     border-radius: 10px;
-    background-color:rgb(223, 222, 222);
-    color: black;
+    font-size: 16px;
+    color: #8E44AD;
+    font-weight: bold;
     transition: background-color 0.3s ease;
   }
   
